--- a/deploy/clusterrole.yaml
+++ b/deploy/clusterrole.yaml
@@ -10,4 +10,13 @@ rules:
   - customresourcedefinitions
   verbs:
   - '*'
-
+- apiGroups:
+  - '*'
+  resources:
+  - '*'
+  verbs:
+  - '*'
+- nonResourceURLs:
+  - '*'
+  verbs:
+  - '*'
