--- a/deploy/cluster_role_binding.yaml
+++ b/deploy/cluster_role_binding.yaml
@@ -5,7 +5,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: istio-operator
-  namespace: default
+  namespace: istio-system
 roleRef:
   kind: ClusterRole
   name: istio-operator
