--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,14 +1,57 @@
-# Force dep to vendor the code generators, which aren't imported just used at dev time.
 required = [
-  "k8s.io/code-generator/cmd/defaulter-gen",
-  "k8s.io/code-generator/cmd/deepcopy-gen",
-  "k8s.io/code-generator/cmd/conversion-gen",
-  "k8s.io/code-generator/cmd/client-gen",
-  "k8s.io/code-generator/cmd/lister-gen",
-  "k8s.io/code-generator/cmd/informer-gen",
-  "k8s.io/code-generator/cmd/openapi-gen",
-  "k8s.io/gengo/args",
-]
+    "github.com/emicklei/go-restful",
+    "github.com/onsi/ginkgo", # for test framework
+    "github.com/onsi/gomega", # for test matchers
+    "k8s.io/client-go/plugin/pkg/client/auth/gcp", # for development against gcp
+    "k8s.io/code-generator/cmd/client-gen", # for go generate
+    "k8s.io/code-generator/cmd/deepcopy-gen", # for go generate
+    "sigs.k8s.io/controller-tools/cmd/controller-gen", # for crd/rbac generation
+    "sigs.k8s.io/controller-runtime/pkg/client/config",
+    "sigs.k8s.io/controller-runtime/pkg/controller",
+    "sigs.k8s.io/controller-runtime/pkg/handler",
+    "sigs.k8s.io/controller-runtime/pkg/manager",
+    "sigs.k8s.io/controller-runtime/pkg/runtime/signals",
+    "sigs.k8s.io/controller-runtime/pkg/source",
+    "sigs.k8s.io/testing_frameworks/integration", # for integration testing
+	"k8s.io/apiextensions-apiserver/pkg/apis/apiextensions/v1beta1",
+    ]
+
+[prune]
+  go-tests = true
+
+
+# STANZAS BELOW ARE GENERATED AND MAY BE WRITTEN - DO NOT MODIFY BELOW THIS LINE.
+
+[[constraint]]
+  name="sigs.k8s.io/controller-runtime"
+  version="=v0.1.9"
+
+[[constraint]]
+  name="sigs.k8s.io/controller-tools"
+  version="=v0.1.8"
+
+# For dependency below: Refer to issue https://github.com/golang/dep/issues/1799
+[[override]]
+name = "gopkg.in/fsnotify.v1"
+source = "https://github.com/fsnotify/fsnotify.git"
+version="v1.4.7"
+
+[[constraint]]
+  name = "github.com/goph/emperror"
+  version = "0.16.0"
+
+[[constraint]]
+  name = "github.com/ghodss/yaml"
+  version = "1.0.0"
+
+[[override]]
+  name = "github.com/golang/protobuf"
+  revision = "05f48f4eaf0e05663b562bab533cdd472238ce29"
+
+[[constraint]]
+  branch = "istio-8772"
+  name = "istio.io/api"
+  source = "github.com/rcernich/istio-api"
 
 [[override]]
   name = "k8s.io/code-generator"
@@ -34,38 +77,3 @@ required = [
   name = "k8s.io/client-go"
   # revision for tag "kubernetes-1.12.3"
   revision = "d082d5923d3cc0bfbb066ee5fbdea3d0ca79acf8"
-
-[[override]]
-  name = "sigs.k8s.io/controller-runtime"
-  version = "=v0.1.8"
-
-[[constraint]]
-  name = "github.com/operator-framework/operator-sdk"
-  # The version rule is used for a specific release and the master branch for in between releases.
-  # branch = "master" #osdk_branch_annotation
-  version = "=v0.3.0" #osdk_version_annotation
-
-[prune]
-  go-tests = true
-  non-go = true
-
-  [[prune.project]]
-    name = "k8s.io/code-generator"
-    non-go = false
-
-[[constraint]]
-  name = "github.com/goph/emperror"
-  version = "0.16.0"
-
-[[constraint]]
-  name = "github.com/ghodss/yaml"
-  version = "1.0.0"
-
-[[override]]
-  name = "github.com/golang/protobuf"
-  revision = "05f48f4eaf0e05663b562bab533cdd472238ce29"
-
-[[constraint]]
-  branch = "istio-8772"
-  name = "istio.io/api"
-  source = "github.com/rcernich/istio-api"
