--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -1,5 +1,5 @@
 # Adds namespace to all resources.
-namespace: istio-operator-system
+namespace: istio-system
 
 # Value of this field is prepended to the
 # names of all resources, e.g. a deployment named
@@ -40,6 +40,7 @@ patches:
   # Only one of manager_auth_proxy_patch.yaml and
   # manager_prometheus_metrics_patch.yaml should be enabled.
 #- manager_prometheus_metrics_patch.yaml
+- manager_role_patch.yaml
 
 vars:
 - name: WEBHOOK_SECRET_NAME
