--- a/config/samples/config_v1alpha2_stdio.yaml
+++ b/config/samples/config_v1alpha2_stdio.yaml
@@ -1,9 +1,9 @@
-apiVersion: istio.banzaicloud.io/v1beta1
-kind: Config
+apiVersion: config.istio.io/v1alpha2
+kind: Stdio
 metadata:
   labels:
     controller-tools.k8s.io: "1.0"
-  name: config-sample
+  name: stdio-sample
 spec:
   # Add fields here
   foo: bar
