--- a/config/default/manager_role_patch.yaml
+++ b/config/default/manager_role_patch.yaml
@@ -25,7 +25,7 @@ rules:
   - update
   - patch
 - apiGroups:
-  - istio.banzaicloud.io
+  - operator.istio.io
   resources:
   - configs
   verbs:
@@ -37,7 +37,7 @@ rules:
   - patch
   - delete
 - apiGroups:
-  - istio.banzaicloud.io
+  - operator.istio.io
   resources:
   - configs/status
   verbs:
