--- a/config/rbac/rbac_role.yaml
+++ b/config/rbac/rbac_role.yaml
@@ -25,7 +25,7 @@ rules:
   - update
   - patch
 - apiGroups:
-  - istio.banzaicloud.io
+  - operator.operator.io
   resources:
   - configs
   verbs:
@@ -37,7 +37,7 @@ rules:
   - patch
   - delete
 - apiGroups:
-  - istio.banzaicloud.io
+  - operator.operator.io
   resources:
   - configs/status
   verbs:
