Enable global mTLS, add developer.md

--- a/config/crds/operator_v1beta1_config.yaml
+++ b/config/crds/operator_v1beta1_config.yaml
@@ -27,6 +27,9 @@ spec:
         metadata:
           type: object
         spec:
+          properties:
+            mtls:
+              type: boolean
           type: object
         status:
           type: object
