Multi cluster enhancements
- MTLS support for remote flat multi cluster
- basic status support for remote config CRD
- prevent removing remote config CR during reconciling
- configuration restructure
- support for include/exclude ip ranges configuration

--- a/config/crds/operator_v1beta1_config.yaml
+++ b/config/crds/operator_v1beta1_config.yaml
@@ -28,8 +28,14 @@ spec:
           type: object
         spec:
           properties:
+            excludeIPRanges:
+              type: string
+            includeIPRanges:
+              type: string
             mtls:
               type: boolean
+          required:
+          - mtls
           type: object
         status:
           type: object
