--- a/config/samples/operator_v1beta1_remoteconfig.yaml
+++ b/config/samples/operator_v1beta1_remoteconfig.yaml
@@ -5,23 +5,16 @@ metadata:
     controller-tools.k8s.io: "1.0"
   name: remote-cluster
 spec:
-  clusterName: "remote-cluster"
-  config:
-    IncludeIPRanges: "*"
-    mtlsEnabled: false
-    enabledServices:
-      - name: "istio-pilot"
-        labelSelector: "istio=pilot"
-        podIPs: []
-      - name: "istio-policy"
-        labelSelector: "istio-mixer-type=policy"
-        podIPs: []
-      - name: "istio-statsd"
-        labelSelector: "statsd-prom-bridge"
-        podIPs: []
-      - name: "istio-telemetry"
-        labelSelector: "istio-mixer-type=telemetry"
-        podIPs: []
-      - name: "zipkin"
-        labelSelector: "app=jaeger"
-        podIPs: []
+  includeIPRanges: "*"
+  excludeIPRanges: ""
+  enabledServices:
+  - name: "istio-pilot"
+    labelSelector: "istio=pilot"
+  - name: "istio-policy"
+    labelSelector: "istio-mixer-type=policy"
+  - name: "istio-statsd"
+    labelSelector: "statsd-prom-bridge"
+  - name: "istio-telemetry"
+    labelSelector: "istio-mixer-type=telemetry"
+  - name: "zipkin"
+    labelSelector: "app=jaeger"
