support enabling control plane security for remote istios as well

--- a/config/samples/operator_v1beta1_config.yaml
+++ b/config/samples/operator_v1beta1_config.yaml
@@ -10,4 +10,4 @@ spec:
   excludeIPRanges: ""
   autoInjectionNamespaces:
   - "default"
-  controlPlaneSecurityEnabled: false
+  controlPlaneSecurityEnabled: true
