--- a/config/samples/operator_v1beta1_remoteconfig.yaml
+++ b/config/samples/operator_v1beta1_remoteconfig.yaml
@@ -18,3 +18,4 @@ spec:
     labelSelector: "istio-mixer-type=telemetry"
   - name: "zipkin"
     labelSelector: "app=jaeger"
+  controlPlaneSecurityEnabled: true
