--- a/config/crds/operator_v1beta1_remoteconfig.yaml
+++ b/config/crds/operator_v1beta1_remoteconfig.yaml
@@ -36,6 +36,10 @@ spec:
               items:
                 type: string
               type: array
+            controlPlaneSecurityEnabled:
+              description: ControlPlaneSecurityEnabled control plane services are
+                communicating through mTLS
+              type: boolean
             enabledServices:
               items:
                 properties:
