support reconciling auto inject labels for remote istios as well

--- a/config/crds/operator_v1beta1_remoteconfig.yaml
+++ b/config/crds/operator_v1beta1_remoteconfig.yaml
@@ -30,6 +30,12 @@ spec:
           type: object
         spec:
           properties:
+            autoInjectionNamespaces:
+              description: List of namespaces to label with sidecar auto injection
+                enabled
+              items:
+                type: string
+              type: array
             enabledServices:
               items:
                 properties:
