--- a/config/crds/operator_v1beta1_config.yaml
+++ b/config/crds/operator_v1beta1_config.yaml
@@ -11,6 +11,8 @@ spec:
     kind: Config
     plural: configs
   scope: Namespaced
+  subresources:
+    status: {}
   validation:
     openAPIV3Schema:
       properties:
