--- a/config/samples/istio_v1beta1_istio.yaml
+++ b/config/samples/istio_v1beta1_istio.yaml
@@ -1,9 +1,9 @@
-apiVersion: operator.istio.io/v1beta1
-kind: Config
+apiVersion: istio.banzaicloud.io/v1beta1
+kind: Istio
 metadata:
   labels:
     controller-tools.k8s.io: "1.0"
-  name: config-sample
+  name: istio-sample
 spec:
   mtls: false
   includeIPRanges: "*"
