--- a/config/samples/istio_v1beta1_remoteistio.yaml
+++ b/config/samples/istio_v1beta1_remoteistio.yaml
@@ -22,6 +22,10 @@ spec:
     labelSelector: "app=jaeger"
   controlPlaneSecurityEnabled: true
   citadel:
+      image: "istio/citadel:1.0.5"
       replicaCount: 1
   sidecarInjector:
+      image: "istio/sidecar_injector:1.0.5"
       replicaCount: 1
+  proxy:
+      image: "istio/proxyv2:1.0.5"
