add servicelabels to sample

--- a/config/samples/istio_v1beta1_istio.yaml
+++ b/config/samples/istio_v1beta1_istio.yaml
@@ -28,11 +28,13 @@ spec:
       minReplicas: 1
       maxReplicas: 5
       serviceAnnotations: {}
+      serviceLabels: {}
     egress:
       replicaCount: 1
       minReplicas: 1
       maxReplicas: 5
       serviceAnnotations: {}
+      serviceLabels: {}
   mixer:
     image: "istio/mixer:1.0.5"
     replicaCount: 1
