sidecarinjector update + configs: privileged, proxy init image

--- a/config/crds/istio_v1beta1_istio.yaml
+++ b/config/crds/istio_v1beta1_istio.yaml
@@ -141,6 +141,14 @@ spec:
               properties:
                 image:
                   type: string
+                privileged:
+                  type: boolean
+              type: object
+            proxyInit:
+              description: Proxy Init configuration options
+              properties:
+                image:
+                  type: string
               type: object
             sidecarInjector:
               description: SidecarInjector configuration options
