--- a/config/crds/istio_v1beta1_remoteistio.yaml
+++ b/config/crds/istio_v1beta1_remoteistio.yaml
@@ -78,6 +78,8 @@ spec:
               properties:
                 image:
                   type: string
+                privileged:
+                  type: boolean
               type: object
             sidecarInjector:
               description: SidecarInjector configuration options
