--- a/config/samples/istio_v1beta1_istio.yaml
+++ b/config/samples/istio_v1beta1_istio.yaml
@@ -52,4 +52,6 @@ spec:
     image: "gcr.io/istio-release/proxy_init:release-1.1-latest-daily"
   defaultPodDisruptionBudget:
     enabled: true
+  outboundTrafficPolicy:
+    mode: REGISTRY_ONLY
 
