--- a/config/samples/istio_v1beta1_istio.yaml
+++ b/config/samples/istio_v1beta1_istio.yaml
@@ -46,6 +46,9 @@ spec:
   sidecarInjector:
     image: "gcr.io/istio-release/sidecar_injector:release-1.1-latest-daily"
     replicaCount: 1
+  nodeAgent:
+    enabled: false
+    image: "gcr.io/istio-release/node-agent-k8s:release-1.1-latest-daily"
   proxy:
     image: "gcr.io/istio-release/proxyv2:release-1.1-latest-daily"
     enableCoreDump: false
