--- a/config/samples/istio_v1beta1_istio.yaml
+++ b/config/samples/istio_v1beta1_istio.yaml
@@ -32,9 +32,6 @@ spec:
       maxReplicas: 5
       serviceAnnotations: {}
       serviceLabels: {}
-      sds:
-        enabled: false
-        image: "gcr.io/istio-release/node-agent-k8s:release-1.1-latest-daily"
     egress:
       replicaCount: 1
       minReplicas: 1
@@ -62,5 +59,5 @@ spec:
   defaultPodDisruptionBudget:
     enabled: true
   outboundTrafficPolicy:
-    mode: REGISTRY_ONLY
+    mode: ALLOW_ANY
 
