configurable tracer address

--- a/config/samples/istio_v1beta1_istio.yaml
+++ b/config/samples/istio_v1beta1_istio.yaml
@@ -60,4 +60,6 @@ spec:
     enabled: true
   outboundTrafficPolicy:
     mode: ALLOW_ANY
-
+  tracing:
+    zipkin:
+      address: zipkin.istio-system:9411
